--- a/views/visit.erb
+++ b/views/visit.erb
@@ -34,15 +34,29 @@
     </select>
   </div>
 
+  <div class="form-group">
   <label>Ваш парикмахер</label>
   
-  <p><select name="barber" required>
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
-  </select></p>
+   <select name="barber" required>
+
+    <!--
+       <option>1</option>
+       <option>2</option>
+       <option>3</option>
+       <option>4</option>
+       <option>5</option> 
+  -->
+
+      <% @barbers.each do |item| %>
+        <option 
+          
+          <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %>
+            
+        </option>
+      <%end%>
+      
+    </select>
+  </div>
 
   <button type="submit" class="btn btn-primary">Записаться</button>
 </form>
