--- a/views/visit.erb
+++ b/views/visit.erb
@@ -3,17 +3,17 @@
 <form action="/visit" method="POST" role="form">
   <div class="form-group">
     <label>Ваше имя</label>
-    <input name="client[name]" type="text" class="form-control" id="name" placeholder="Введите ваше имя" value="">
+    <input name="client[name]" type="text" class="form-control" id="name" placeholder="Введите ваше имя" value="<%= @c.name %>">
   </div>
 
   <div class="form-group">
     <label>Ваш телефон</label>
-    <input name="client[phone]" type="text" class="form-control" id="phone" placeholder="Введите ваш номер телевона" value="">
+    <input name="client[phone]" type="text" class="form-control" id="phone" placeholder="Введите ваш номер телевона" value=<%= @c.phone %>"">
   </div>
 
   <div class="form-group">
     <label>Время визита</label>
-    <input name="client[datestamp]" type="text" class="form-control" id="data" placeholder="Введите время визита" value="">
+    <input name="client[datestamp]" type="text" class="form-control" id="data" placeholder="Введите время визита" value="<%= @c.datestamp %>">
   </div>
 
   <div class="form-group">
