Add /bookings link to menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,9 +20,8 @@
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="/visit">Visit <span class="sr-only">(current)</span></a>
-						</li>
+						<li><a class="nav-link" href="/visit">Visit</a></li>
+						<li><a class="nav-link" href="/bookings">List of registered</a></li>
 					</ul>
 				</div>
 			</nav>
